[package]
name = "mipstenite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
nom = "7.1.3"
nom_locate = "4.2.0"
serde = { version = "1.0.193", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
