[package]
name = "mipstenite"
version = "0.1.0"
edition = "2021"
description = "A MIPS emulator written in Rust for educatinal purposes and easier debugging."
authors = ["Adhyan H."]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[env]
RUST_LOG = "trace"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
nom = "7.1.3"
nom_locate = "4.2.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
# tokio = { version = "1.35.0", features = ["full"] }
# tungstenite = "0.21.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
